# coral-is

./: .gitignore  CUSTOM_MODEL.MD  README.md  UPDATES.md  pyproject.toml
coral/examples/: facial_recognition.sh  gpio_test.py  image_classification.sh
scripts/: common.sh  coral_setup.sh  host_setup.sh
